# release-hub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md
docs/superpowers/specs/: 2026-04-21-updater-migration-design.md
examples/: dioxus.rs
src/: builder.rs  config.rs  error.rs  github.rs  lib.rs  linux.rs  macos.rs  release.rs  target.rs  utils.rs  verify.rs  windows.rs
src/source/: endpoint.rs  github.rs  mod.rs
tests/: endpoint_source.rs  github_source.rs  install_linux.rs  manifest_models.rs  target_resolution.rs  update_flow.rs
tests/fixtures/minisign/: test.sig
